--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,8 +123,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.linsea:universalvideoview:1.1.0@aar'
     implementation project(':FFmpeg4Android')
 }
+
 
 
 
