--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 30 11:36:14 CST 2017
-ndk.dir=D\:\\Program Files\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Thu Nov 30 14:03:59 GMT+08:00 2017
+ndk.dir=E\:\\Android\\sdk\\ndk-bundle
+sdk.dir=E\:\\Android\\sdk
