--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 01 13:24:24 CST 2017
-ndk.dir=D\:\\Program Files\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Fri Dec 01 17:12:47 GMT+08:00 2017
+ndk.dir=E\:\\Android\\sdk\\ndk-bundle
+sdk.dir=E\:\\Android\\sdk
