--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,6 +187,10 @@
             android:name=".activity.LoginForCodeActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.WelComeSetTextActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".activity.LinkTvActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible" />
