--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -198,7 +198,9 @@
             android:name=".activity.LinkTvActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible" />
-        <activity android:name=".activity.RecommendFoodActivity"></activity>
+        <activity android:name=".activity.RecommendFoodActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
