--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 13 14:27:54 CST 2017
-ndk.dir=D\:\\Program Files\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Wed Dec 13 16:34:39 GMT+08:00 2017
+ndk.dir=E\:\\Android\\sdk\\ndk-bundle
+sdk.dir=E\:\\Android\\sdk
