--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.savor.resturant">
 
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- 相机 -->
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- 获取设备imie序列号生成deviceid -->
@@ -194,13 +194,13 @@
         <activity
             android:name=".activity.RecommendFoodActivity"
             android:screenOrientation="portrait" />
-         <activity android:name=".activity.SavorMainActivity"
-             android:screenOrientation="portrait"
-             />
-        <activity android:name=".activity.ContactAndCustomerListActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan"
+        <activity
+            android:name=".activity.SavorMainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ContactAndCustomerListActivity"
             android:screenOrientation="portrait"
-            />
+            android:windowSoftInputMode="stateHidden|adjustPan" />
     </application>
 
 </manifest>
