--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 03 15:54:50 GMT+08:00 2018
-ndk.dir=E\:\\Android\\sdk\\ndk-bundle
-sdk.dir=E\:\\Android\\sdk
+#Thu Jan 04 09:13:58 CST 2018
+ndk.dir=D\:\\Program Files\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\Program Files\\Android\\sdk
