--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -231,6 +231,9 @@
         <activity
             android:name=".activity.RoomListActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AddRemarkActivity"
+            android:screenOrientation="portrait" />
 
 
 
