--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -247,6 +247,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.PhotoShowActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
              />
 
 
