--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 01 17:40:41 GMT+08:00 2018
-ndk.dir=E\:\\Android\\sdk\\ndk-bundle
-sdk.dir=E\:\\Android\\sdk
+#Fri Feb 02 15:38:20 CST 2018
+ndk.dir=D\:\\Program Files\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\Program Files\\Android\\sdk
