--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 09 10:12:53 CST 2018
-ndk.dir=D\:\\Program Files\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Fri Feb 09 10:22:56 GMT+08:00 2018
+ndk.dir=E\:\\Android\\sdk\\ndk-bundle
+sdk.dir=E\:\\Android\\sdk
